--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "extract-text-webpack-plugin": "^1.0.1",
     "vue": "^2.0.1"
   },
   "devDependencies": {
@@ -28,7 +29,7 @@
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.0",
     "eslint": "^3.7.1",
     "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
@@ -54,6 +55,10 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "less": "^2.3.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
+    "postcss-loader": "^1.1.1",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "opn": "^4.0.2",
