--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": false
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
